k8s/notifications.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-service
  labels:
    app: notifications-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: notifications-service
  template:
    metadata:
      labels:
        app: notifications-service
    spec:
      containers:
      - name: notifications-service
        image: registry.gitlab.com/cs302-labs-emmaneugene/services/notifications/main:latest
        imagePullPolicy: Always
      imagePullSecrets:
      - name: gitlab-registry-access
---
