k8s/admin-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-web
  labels:
    app: admin-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin-web
  template:
    metadata:
      labels:
        app: admin-web
    spec:
      containers:
      - name: admin-web
        image: registry.gitlab.com/cs302-labs-emmaneugene/user-interfaces/admin-web/main:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: gitlab-registry-access
---
apiVersion: v1
kind: Service
metadata:
  name: admin-web
spec:
  type: NodePort
  selector:
    app: admin-web
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 80
