k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs302-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: cs302.labs.sg
      http:
        paths:
          - path: /api/v1/(games(/.*)?)
            pathType: Prefix
            backend:
              service:
                name: games-service
                port:
                  number: 30000
          - path: /api/v1/(orders(/.*)?)
            pathType: Prefix
            backend:
              service:
                name: orders-service
                port:
                  number: 31000
          - path: /api/v1/(place-order(/.*)?)
            pathType: Prefix
            backend:
              service:
                name: place-order-service
                port:
                  number: 32000
          - path: /admin/((.*)?)
            pathType: Prefix
            backend:
              service:
                name: admin-web
                port:
                  number: 8001
